# memory_enhanced_ACT

./: .gitignore  CODEBASE_SUMMARY.md  MEMORY_IMAGE_V1_NOTES.md  README.md  config.py  generate_occlusion_tasks.py  prepare_act_data.py  requirements.txt  run_me_block_edit_labeled_data.py  run_me_block_generate_memory_images.py  run_me_block_label_annotator.py  run_me_block_prepare_special_data.py  run_me_block_train_importance.py  run_train_with_prototypes.py  training.py  utils.py
act/: README.md  phase_pca.py  phase_prototype.py  policy.py  prototype_loss.py
act/detr/: main.py  main.py.backup  main.py.backup2  main.py.backup3
act/detr/models/: __init__.py  backbone.py  detr_vae.py  position_encoding.py  transformer.py
act/detr/models/me_block/: README.md  __init__.py  annotate_importance_labels.py  config.py  generate_memory_images.py  importance_dataset.py  integration_example.py  me_block_config.py  memory_gate_model.py  plan.py  prepare_special_data.py  train_importance_model.py
cuda_test/: torch_cuda.py
data_process/: csv_process.py  data_loader.py  data_process_1.py  data_process_2.py  exclusions.py  readme.md  rollback.py  traj_data_analize.py
deploy/: README.md  __init__.py  deploy_wrappers.py  export_torchscript_models.py
deploy/cpp/: CMakeLists.txt
deploy/cpp/src/: main.cpp
deploy/me_act_inference/: CMakeLists.txt  README.md  package.xml
deploy/me_act_inference/include/: act_pipeline.h
deploy/me_act_inference/launch/: me_act_baseline.launch.py  me_act_baseline_py.launch.py  me_act_memory.launch.py  me_act_memory_py.launch.py
deploy/me_act_inference/scripts/: act_pipeline_py.py  me_act_inference_node_py.py
deploy/me_act_inference/src/: act_pipeline.cpp  me_act_inference_node.cpp  me_act_replay_node.cpp
deploy/me_act_inference_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
deploy/me_act_inference_py/launch/: me_act_baseline_py.launch.py  me_act_memory_py.launch.py
deploy/me_act_inference_py/me_act_inference_py/: act_pipeline_py.py  me_act_inference_node_py.py  me_act_inference_node_py_compatible_simple.py
deploy/me_act_inference_py/resource/: me_act_inference_py
deploy/ros2/: CMakeLists.txt  README.md
deploy/ros2/launch/: me_act_baseline.launch.py
deploy/ros2/src/: me_act_inference_node.cpp
scripts/: run_paper_experiments.py  run_paper_experiments.sh
tools/: build_action_prototypes.py  build_phase_pca_bank_and_targets.py  build_phase_pca_targets.py  build_phase_prototype_targets.py  plot_strict_four_line_phase.py  review_dataset_trajectory.py  validate_phase_pca_targets.py  visualize_prepared_dataset_report.py
