<?xml version="1.0"?>
<package format="3">
  <name>me_act_inference</name>
  <version>0.0.1</version>
  <description>Baseline ACT ROS2 inference node for JetArm deployment.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>ros_robot_controller_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
